--- a/recipes.html
+++ b/recipes.html
@@ -6,69 +6,70 @@
     <title>Recipes</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href="">Skip to Main Content</a>
     <header>
-		<nav>
-			<ul>
-				<li class="active"><a href = "index.html" >Pets</a></li>
-				<li><a href = "recipes.html">Recipes</a></li>
-				<li><a href = "travel.html">Travel</a></li>
-			</ul>
-		</nav>
+        <nav>
+            <ul>
+                <li class="active"><a href="index.html">Pets</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="travel.html">Travel</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
-    <div>
-        <h2>Double Chocolate Cookies</h2>
-        <span>Origin: Michigan</span>
-        <span>Source: Family Recipe</span>
-        <span>Category: Dessert</span>
+        <div>
+            <h2>Double Chocolate Cookies</h2>
+            <span>Origin: Michigan</span>
+            <span>Source: Family Recipe</span>
+            <span>Category: Dessert</span>
 
-        <img src="images/double_chocolate_cookies.png" width = "400" alt="">
-        <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings.  They are extremely sugary so the salt helps to balance it.  Note, these cookies are best eaten very quickly.</p>
-        <h3>Recipe Ingredients</h3>
-        <ul>
-            <li>Unsalted butter</li>
-            <li>Granulated Sugar</li>
-            <li>Packed light or dark brown sugar</li>
-            <li>Large egg</li>
-            <li>Pure vanilla extract</li>
-            <li>Semi-sweet chocolate chunks (melted)</li>
-            <li>All-purpose flour</li>
-            <li>Natural unsweetened cocoa powder</li>
-            <li>Baking soda</li>
-            <li>Salt</li>
-            <li>Semi-sweet chocolate chunks</li>
-        </ul>
+            <img src="images/double_chocolate_cookies.png" width="400" alt="">
+            <p>My daughter learned to make these cookies at a baking camp at Zingermann's and has tweaked the recipe to fit the taste buds of her siblings. They are extremely sugary, so the salt helps to balance it. Note, these cookies are best eaten very quickly.</p>
+            
+            <h3>Recipe Ingredients</h3>
+            <ul>
+                <li>Unsalted butter</li>
+                <li>Granulated Sugar</li>
+                <li>Packed light or dark brown sugar</li>
+                <li>Large egg</li>
+                <li>Pure vanilla extract</li>
+                <li>Semi-sweet chocolate chunks (melted)</li>
+                <li>All-purpose flour</li>
+                <li>Natural unsweetened cocoa powder</li>
+                <li>Baking soda</li>
+                <li>Salt</li>
+                <li>Semi-sweet chocolate chunks</li>
+            </ul>
 
-        <h3>Recipe Steps</h3>
-        <ol>
-            <li>In a mixing bowl cream together the butter, granulated sugar, and brown sugar</li>
-            <li>Add the egg and vanilla extract and beat well</li>
-            <li>Add the melted chocolate</li>
-            <li>In a separate bowl combine the flour, baking soda, cocoa powder and salt</li>
-            <li>Combine the wet and dry ingredients</li>
-            <li>Add the unmelted chocolate chunks.</li> 
-            <li>Form 15 cookies and place on a baking sheet.</li>
-            <li>Cook for 12 to 13 minutes at 350 degrees.</li>
-        </ol>
+            <h3>Recipe Steps</h3>
+            <ol>
+                <li>In a mixing bowl, cream together the butter, granulated sugar, and brown sugar</li>
+                <li>Add the egg and vanilla extract and beat well</li>
+                <li>Add the melted chocolate</li>
+                <li>In a separate bowl, combine the flour, baking soda, cocoa powder, and salt</li>
+                <li>Combine the wet and dry ingredients</li>
+                <li>Add the unmelted chocolate chunks.</li>
+                <li>Form 15 cookies and place on a baking sheet</li>
+                <li>Cook for 12 to 13 minutes at 350 degrees</li>
+            </ol>
 
-        <h3>Additional Food images</h3>
-        <img src="images/double_chocolate_chips.jpg" width = "200" alt="A small pile of chocolate chips">
-        <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545" width = "200" alt="Chocolate melting in a boiler">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width = "200" alt="Brown sugar in three different shades of darkness">
+            <h3>Additional Food Images</h3>
+            <img src="images/double_chocolate_chips.jpg" width="200" alt="A small pile of chocolate chips">
+            <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545" width="200" alt="Chocolate melting in a boiler">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width="200" alt="Brown sugar in three different shades of darkness">
+        </div>
+    </main>
 
-        <!-- Colleen van Lent -->
-
-    </div>
     <div>
         <h2>Swedish Pancakes</h2>
         <span>Origin: Sweden</span>
-        <span>Source: <a href="true-north-kitchen.com">Kristi at True North Kitchen</a></span>
+        <span>Source: <a href="https://true-north-kitchen.com">Kristi at True North Kitchen</a></span>
         <span>Category: Breakfast</span>
 
-        <img src="images/swedish-pancakes-platted.jpeg" width = "200" alt="Swedish Pancakes on a plate with fruit.">
-        <p>Swedish pancakes (Pannkaka [singular] or Pannkakor [plural] in Swedish) are one of the most well-known Scandinavian delicacies, and rightfully so. Tender, buttery and often served with butter and lingonberry jam, there is much to account for their popularity.
-        </p>
+        <img src="images/swedish-pancakes-platted.jpeg" width="200" alt="Swedish Pancakes on a plate with fruit.">
+        <p>Swedish pancakes (Pannkaka [singular] or Pannkakor [plural] in Swedish) are one of the most well-known Scandinavian delicacies, and rightfully so. Tender, buttery, and often served with butter and lingonberry jam, there is much to account for their popularity.</p>
+        
         <h3>Recipe Ingredients</h3>
         <ul>
             <li>Butter</li>
@@ -83,14 +84,17 @@
 
         <h3>Recipe Steps</h3>
         <ol>
-            <li>Combine all ingredients in a blender and blend until completely smooth.Transfer to the refrigerator to rest for at least 2 hours or up to 2 days.</li>
-            <li>Preheat oven to 200 degrees if you plan to eat the pannkakor right away.  Heat a 10 inch nonstick skillet over medium heat.  Stir the batter briefly to recombine. Brush skillet with melted butter.  Pick the skillet up off of the burner and quickly add ¼ cup of batter. Immediately begin swirling the batter around the skillet so that it coats the bottom of the pan.  Continue swirling until the batter is just set.  Return skillet to the burner. Cook until the pancake is golden brown in spots on the bottom, about 30 seconds. Use a thin spatula to loosen the pancake, flip it over continue to cook on the other side for about 30 seconds.  Transfer to a plate. Cover with foil and transfer to oven to keep warm and repeat with remaining batter, wiping out skillet in between pancakes with paper towel as needed.</li>
+            <li>Combine all ingredients in a blender and blend until completely smooth. Transfer to the refrigerator to rest for at least 2 hours or up to 2 days.</li>
+            <li>Preheat oven to 200 degrees if you plan to eat the pannkakor right away. Heat a 10-inch nonstick skillet over medium heat. Stir the batter briefly to recombine. Brush the skillet with melted butter. Pick the skillet up off of the burner and quickly add ¼ cup of batter. Immediately begin swirling the batter around the skillet so that it coats the bottom of the pan. Continue swirling until the batter is just set. Return the skillet to the burner. Cook until the pancake is golden brown in spots on the bottom, about 30 seconds. Use a thin spatula to loosen the pancake, flip it over and continue to cook on the other side for about 30 seconds. Transfer to a plate. Cover with foil and transfer to the oven to keep warm and repeat with the remaining batter, wiping out the skillet in between pancakes with paper towel as needed.</li>
             <li>Serve with lingonberry jam and butter (see note below) or other desired toppings and/or fillings. See notes below for more information about making ahead of time and storing in the refrigerator or freezer.</li>
         </ol>
 
-        <h3>Additional Food Image</h3>
-        <img src="images/swedish-pancakes-pan.jpeg" width = "200" alt="Swedish Pancakes in a pan.">
+        <h3>Additional Food Images</h3>
+        <img src="images/swedish-pancakes-pan.jpeg" width="200" alt="Swedish Pancakes in a pan.">
+        <img src="images/swedish_pancake_2.jpeg" width="200" alt="Swedish Pancakes on a plate with fruit.">
+        <img src="images/swedish_pancakes_3.jpeg" width="200" alt="Swedish Pancakes on a plate with fruit.">
     </div>
+
     <div>
         <h2>Coca-Cola Chicken Wings</h2>
         <span>Origin: China</span>
@@ -98,8 +102,8 @@
         <span>Category: Main Dish</span>
 
         <img src="images/coca_cola_chicken_wings.jpg" width="200" alt="A bowl of Coca cola chicken wings.">
-        <p>I learnt how to cook Coca-Cola chicken wings from my mother, and I've since tweaked her recipe to better suit my family's palate, making it less sweet. While the cooking process remains straightforward, the result is incredibly flavorful, and once you've tried it, you'll understand its delicious appeal!
-        </p>
+        <p>I learned how to cook Coca-Cola chicken wings from my mother, and I've since tweaked her recipe to better suit my family's palate, making it less sweet. While the cooking process remains straightforward, the result is incredibly flavorful, and once you've tried it, you'll understand its delicious appeal!</p>
+
         <h3>Recipe Ingredients</h3>
         <ul>
             <li>Chicken wings</li>
@@ -109,33 +113,33 @@
             <li>Dark soy sauce</li>
             <li>A can of coke</li>
         </ul>
+
         <h3>Recipe Steps</h3>
         <ol>
             <li>Wash and place chicken wings in a bowl</li>
-            <li>Add scallions, ginger slices, cooking wine, dark soy sauce and salt to the washed chicken wings, and mix them well</li>
-            <li>Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour
-            </li>
-            <li>Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry it until golden brown on both sides
-            </li>
-            <li>After fry the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil</li>
+            <li>Add scallions, ginger slices, cooking wine, dark soy sauce, and salt to the washed chicken wings, and mix them well</li>
+            <li>Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour</li>
+            <li>Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry until golden brown on both sides</li>
+            <li>After frying the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil</li>
             <li>Continue to cook for an additional 2-3 minutes until the glaze has thickened and coats the wings nicely</li>
             <li>Transfer the Coca-Cola glazed chicken wings to a serving platter</li>
         </ol>
 
         <h3>Additional Food Images</h3>
-        <img src="images/chicken_wings_chopsticks.jpg" width = "200" alt="A pair of chopsticks holding a chicken wing.">
+        <img src="images/chicken_wings_chopsticks.jpg" width="200" alt="A pair of chopsticks holding a chicken wing.">
         <img src="images/boils_in_coke.jpg" width="200" alt="Chicken wings boiling in coke.">
         <img src="images/chicken-wings_and_rice_cake.jpg" width="200" alt="Chicken wings and rice cake.">
     </div>
+
     <div>
         <h2>Chinese Hot and Sour Soup</h2>
         <span>Origin: China</span>
         <span>Source: Family Recipe</span>
         <span>Category: Soup</span>
 
-        <img src="images/ChineseHotandSourSoup1.jpg" width="200" alt="A bowl of chinese hot and sour soup.">
-        <p>a popular and flavorful soup known for its spicy and tangy taste. It's made with a variety of ingredients including tofu, mushrooms, and bamboo shoots.
-        </p>
+        <img src="images/ChineseHotandSourSoup1.jpg" width="200" alt="A bowl of Chinese hot and sour soup.">
+        <p>A popular and flavorful soup known for its spicy and tangy taste. It's made with a variety of ingredients including tofu, mushrooms, and bamboo shoots.</p>
+
         <h3>Recipe Ingredients</h3>
         <ul>
             <li>Tofu</li>
@@ -145,6 +149,7 @@
             <li>Bamboo Shoots</li>
             <li>Soy Sauce</li>
         </ul>
+
         <h3>Recipe Steps</h3>
         <ol>
             <li>Boil the water.</li>
@@ -156,19 +161,20 @@
         </ol>
 
         <h3>Additional Food Images</h3>
-        <img src="images/ChineseHotandSourSoup2.jpg" width = "200" alt="Soup of Hot and Sour soup.">
-        <img src="images/ChineseHotandSourSoup3.jpg" width="200" alt="Top view of the Hot and Sor Soup.">
+        <img src="images/ChineseHotandSourSoup2.jpg" width="200" alt="Soup of Hot and Sour soup.">
+        <img src="images/ChineseHotandSourSoup3.jpg" width="200" alt="Top view of the Hot and Sour Soup.">
         <img src="images/ChineseHotandSourSoup4.jpg" width="200" alt="The Ingredients needed for Hot and Sour Soup.">
     </div>
+
     <div>
         <h2>Zucchini Fritters</h2>
         <span>Origin: Turkey</span>
-        <span>Source: <a href="niftyrecipe.com">Nifty Recipe</a></span> </span>
+        <span>Source: <a href="https://niftyrecipe.com">Nifty Recipe</a></span>
         <span>Category: Side dish/main dish</span>
 
         <img src="images/Zucchini_fritters_1.jpeg" width="200" alt="A plate of Zucchini fritter.">
-        <p>It uses minimal ingredients and can be done in less than half an hour. They’re delicious and filling and go great with dipping sauces.
-            You can serve them as a side dish or as a main dish with a salad on the side. They are also great for breakfast or brunch. </p>
+        <p>These Zucchini fritters use minimal ingredients and can be done in less than half an hour. They’re delicious and filling and go great with dipping sauces. You can serve them as a side dish or as a main dish with a salad on the side. They are also great for breakfast or brunch.</p>
+
         <h3>Recipe Ingredients</h3>
         <ul>
             <li>Zucchini</li>
@@ -178,18 +184,19 @@
             <li>Garlic</li>
             <li>Salt and Pepper</li>
         </ul>
+
         <h3>Recipe Steps</h3>
         <ol>
             <li>Combine eggs, salt, and pepper and whisk</li>
             <li>Add pressed garlic</li>
             <li>Grate the zucchini and squeeze the moisture out of it</li>
             <li>Add zucchini and flour and mix.</li>
-            <li>Heat oil in pan and add dollops of batter</li>
+            <li>Heat oil in a pan and add dollops of batter</li>
             <li>Serve with or without dipping sauce</li>
         </ol>
 
         <h3>Additional Food Images</h3>
-        <img src="images/Zucchini_fritters_2.jpeg" width = "200" alt="Grated zucchini.">
+        <img src="images/Zucchini_fritters_2.jpeg" width="200" alt="Grated zucchini.">
         <img src="images/Zucchini_fritters_3.jpeg" width="200" alt="Zucchini fritters in the pan cooking.">
         <img src="images/Zucchini_fritters_4.jpg" width="200" alt="Ingredients for zucchini fritters combined.">
     </div>
