--- a/travel.html
+++ b/travel.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,15 +5,16 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href="">Skip to Main Content</a>
     <header>
-		<nav>
-			<ul>
-				<li class="active"><a href = "index.html" >Pets</a></li>
-				<li><a href = "recipes.html">Recipes</a></li>
-				<li><a href = "travel.html">Travel</a></li>
-			</ul>
-		</nav>
+        <nav>
+            <ul>
+                <li class="active"><a href="index.html">Pets</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="travel.html">Travel</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <div>
@@ -41,7 +41,7 @@
 
             <figure>
                 <video width="200"  controls>
-                    <source src="images/prismatic spring.mp4">
+                    <source src="images/prismatic_spring.mp4">
                     Your browser does not support the video tag.
                 </video>
                 <figcaption>The multicolored layers get their hues from different species of bacteria living in the cooler water around the spring.</figcaption>
@@ -50,7 +50,7 @@
 
             <figure>
                 <video width="200"  controls>
-                    <source src="images/bison road.mp4">
+                    <source src="images/bison_road.mp4">
                     Your browser does not support the video tag.
                 </video>
                 <figcaption>The bison were so common along the roads in Yellowstone that our mantra became "If it ain't lickin the car, we aren't stopping."</figcaption>
@@ -76,12 +76,12 @@
 
             <h3>Photo Gallery</h3>
             <figure>
-                <img src="images/NYC night_views.jpeg" width = "200" alt="Night View of New York City.">
+                <img src="images/NYC_night_views.jpeg" width = "200" alt="Night View of New York City.">
                 <figcaption>Night in NYC is still vibrant and alive, it is truly the city that never sleeps.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/Time Square.png" width = "200" alt="Photo of Time Square.">
+                <img src="images/Time_Square.png" width = "200" alt="Photo of Time Square.">
                 <figcaption>Time square is crowded with people from all over the world, and its aliveness flows in the lights and shadows of the city.</figcaption>
             </figure>
 
