--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <!-- The h1 is a semantic tag that aids accessibility -->
         <h1>Mohammad Awad (mohammaw)</h1>
     </header>
-    <a href="#main-content" class="skip-to-content">Skip to Main Content</a>    
+    <a href="#main-content" class="skip-to-content">Skip to Main Content</a>
     <main id="main-content" class="grid-layout">
-        <div>
+        <div class="first-pet">
             <h1>Bella - The Cat</h1>
             <img src="images/Bella_main.jpg" width="300" alt="Bella the white and black cat.">
 
