--- a/recipes.html
+++ b/recipes.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <main id="main-content" class="grid-layout">
+    <main id="main-content" id="recipe" class="grid-layout">
         <div>
             <h2>Double Chocolate Cookies</h2>
             <span>Origin: Michigan</span>
