--- a/travel.html
+++ b/travel.html
@@ -60,7 +60,7 @@
             </figure>
 
             <figure>
-                <img src="images/sulphur_spring.jpg" width = "200" alt="A large spring with clouds of sulfur smoke rising from it.">
+                <img src="images/yellowstone_cauldron.gif" width = "200" alt="A large spring with clouds of sulfur smoke rising from it." class="gif">
                 <figcaption>If you can handle the odor, the Yellowstone Sulphur Springs is a great place to hike.</figcaption>
             </figure>
             <!-- Colleen van Lent -->
@@ -68,7 +68,7 @@
         <div>
             <h2>New York</h2>
 
-            <img src="images/NYC.gif" width="400" alt="New York City Skyline.">
+            <img src="images/NYC.gif" width="400" alt="New York City Skyline." class="gif">
             <img src="images/NYC_Empire_State.jpeg" width="400" alt="New York City Empire State Building.">
 
             <h3>Geographical Location: NYC, NY, United States, North America</h3>
